Removed fabric.js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="timeline-panel">
             <div class="tl-heading">
               <h4>Year Of Enlightment</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>May 2014</small></p>
+              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i><i class="tl-date">May 2014</i></small></p>
             </div>
             <div class="tl-body">
               <p>Hope the weather gets a bit nicer...</p>       
@@ -225,6 +225,7 @@
 
 	</body>
     <script type="text/javascript" src="./js/scripts.js"></script>
+    <script type="text/javascript" src="./js/fabric.js"></script>
 		<script type="text/javascript" src="./js/draw-graph.js"></script>
 
 </html>
