changed tag line

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 				<img id="prof_pic" class="img-circle img" alt="prof_pic" src="./img/crop_512.png"><br>
 				<h1>Hi</h1>
 				<h1 class="first-heading">I'm Lalit Umbarkar</h1>
-				<h3>I'm  creative and a coder.</h3>
+				<h3>I stand on a sweet spot where</h3>
+				<h3>Creativity & Code</h3>
+				<h3>INTERSECTS</h3>
 			</div>
 		</div>
 
