Added meta tags for improvements

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>Lalit Umbarkar</title>
 
     <meta charset="utf-8">
+    <meta content="width=device-width,initial-scale=1.0" name="viewport">
     <meta content="text/html" http-equiv="Content-Type">
     <meta content="Lalit Umbarkar" name="author">
+    <meta content="A web portfolio of Lalit Umbarkar. Lalit Umbarkar is a Software Developer and might be interested in job opportunities"
+          name="description">
+    <meta content=”index,follow” name=”robots”>
+    <meta content="tlkxT_Mv1bd843zAooi8-_wKTi0GQDumJ7nVRm_Tb-c" name="google-site-verification" />
+
     <link href="assets/css/styles.css" media="all" rel="stylesheet" type="text/css">
     <link href="assets/css/header-styles.css" media="all" rel="stylesheet" type="text/css">
     <link href="assets/css/social.css" media="all" rel="stylesheet" type="text/css">
