--- a/icms/index.html
+++ b/icms/index.html
@@ -12,7 +12,7 @@
     <div class="flex five">
         <div>
             <article class="card">
-                <img src="https://picsum.photos/200/300?blur=1" alt="image_holder">
+                <img src="https://picsum.photos/200/300?blur=1&random=1" alt="image_holder">
                 <footer>
                     <h3>Uranium</h3>
                     <button class="stack icon-paper-plane" onclick="window.location.href='/icms/uranium'">
@@ -28,7 +28,7 @@
         </div>
         <div>
             <article class="card">
-                <img src="https://picsum.photos/200/300?blur=2" alt="image_holder">
+                <img src="https://picsum.photos/200/300?blur=1&random=2" alt="image_holder">
                 <footer>
                     <h3>Beryllium</h3>
                     <button class="stack icon-paper-plane" onclick="window.location.href='/icms/beryllium'">
@@ -45,7 +45,7 @@
         </div>
         <div>
             <article class="card">
-                <img src="https://picsum.photos/200/300" alt="image_holder">
+                <img src="https://picsum.photos/200/300?blur=1&random=3" alt="image_holder">
                 <footer>
                     <h3>Plutonium</h3>
                     <button class="stack icon-paper-plane" onclick="window.location.href='/icms/plutonium'">
@@ -58,6 +58,26 @@
                                      src="https://github.com/Semantic-Org/Semantic-UI-React/raw/master/docs/public/logo.png"/>
                             </div>
                             Made with Semantic
+                        </a>
+                    </div>
+                </footer>
+            </article>
+        </div>
+        <div>
+            <article class="card">
+                <img src="https://picsum.photos/200/300?blur=1&random=4" alt="image_holder">
+                <footer>
+                    <h3>Lithium</h3>
+                    <button class="stack icon-paper-plane" onclick="window.location.href='/icms/lithium'">
+                        Visit
+                    </button>
+                    <div style="margin-top: 20px">
+                        <a href="https://getbootstrap.com">
+                            <div>
+                                <img alt="Bootstrap UI" height="34"
+                                     src="https://camo.githubusercontent.com/7e090d60341c69164ba7c9b0754c713948f5d668/68747470733a2f2f676574626f6f7473747261702e636f6d2f646f63732f342e352f6173736574732f6272616e642f626f6f7473747261702d736f6c69642e737667">
+                            </div>
+                            Made with Bootstrap
                         </a>
                     </div>
                 </footer>
