Update to add MDB

--- a/icms/oxygen/icms-landing.html
+++ b/icms/oxygen/icms-landing.html
@@ -10,7 +10,7 @@
 
 <div>
     <div class="flex five">
-        <div>
+        <div style="">
             <article class="card">
                 <img src="https://picsum.photos/200/300?blur=1&random=1" alt="image_holder">
                 <footer>
@@ -78,22 +78,6 @@
                                      src="https://camo.githubusercontent.com/7e090d60341c69164ba7c9b0754c713948f5d668/68747470733a2f2f676574626f6f7473747261702e636f6d2f646f63732f342e352f6173736574732f6272616e642f626f6f7473747261702d736f6c69642e737667">
                             </div>
                             Made with Bootstrap
-                        </a>
-                    </div>
-                </footer>
-            </article>
-        </div>
-        <div>
-            <article class="card">
-                <img src="https://picsum.photos/200/300?blur=1&random=5" alt="image_holder">
-                <footer>
-                    <h3>Oxygen</h3>
-                    <button class="stack icon-paper-plane" onclick="window.location.href='/icms/oxygen'">
-                        Visit
-                    </button>
-                    <div style="margin-top: 20px">
-                        <a href="https://mdbootstrap.com">
-                            Made with MDB
                         </a>
                     </div>
                 </footer>
