Update to add germanium. Getting bored of this now

--- a/icms/index.html
+++ b/icms/index.html
@@ -99,6 +99,22 @@
                 </footer>
             </article>
         </div>
+        <div>       
+            <article class="card">
+                <img src="https://picsum.photos/200/300?blur=1&random=6" alt="image_holder">
+                <footer>
+                    <h3>Oxygen</h3>
+                    <button class="stack icon-paper-plane" onclick="window.location.href='/icms/germanium'">
+                        Visit
+                    </button>   
+                    <div style="margin-top: 20px">
+                        <a href="https://evergreen.segment.com/">
+                            Made with Evergreen
+                        </a>
+                    </div>
+                </footer>
+            </article>
+        </div>
     </div>
 
 </div>
